force-app/main/default/objects/Preferred_Supplier__c/Preferred_Supplier__c.object-meta.xml
<CustomObject>
    <label>Preferred Supplier</label>
    <nameField>
        <label>Preferred Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preferred Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>