force-app/main/default/objects/Preferred_Supplier__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Preferred Suppliers</relationshipLabel>
    <relationshipName>Preferred_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>