force-app/main/default/objects/Preferred_Supplier__c/fields/Lane__c.field-meta.xml
<CustomField>
    <fullName>Lane__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lane</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Preferred Suppliers</relationshipLabel>
    <relationshipName>Preferred_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>