force-app/main/default/objects/Preferred_Supplier__c/fields/Lane_Freight_Price__c.field-meta.xml
<CustomField>
    <fullName>Lane_Freight_Price__c</fullName>
    <formula>Lane_Price__r.Freight_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lane Freight Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>