force-app/main/default/objects/Preferred_Supplier__c/fields/Lane_Name__c.field-meta.xml
<CustomField>
    <fullName>Lane_Name__c</fullName>
    <formula>Lane__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lane Name</label>
    <type>Text</type>
</CustomField>