force-app/main/default/objects/Preferred_Supplier__c/fields/Lane_Price__c.field-meta.xml
<CustomField>
    <fullName>Lane_Price__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Lane Price</label>
    <referenceTo>Lane_Price__c</referenceTo>
    <relationshipLabel>Preferred Suppliers</relationshipLabel>
    <relationshipName>Preferred_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>