force-app/main/default/objects/Preferred_Supplier__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Preferred Suppliers</relationshipLabel>
    <relationshipName>Preferred_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>