force-app/main/default/objects/Preferred_Supplier__c/fields/Total_Freight_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Freight_Price__c</fullName>
    <label>Total Freight Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>