force-app/main/default/objects/Preferred_Supplier__c/fields/Trailer_Type__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Type__c</fullName>
    <label>Type Of Trailer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dual temp</fullName>
            </value>
            <value>
                <fullName>Frigo - ambient</fullName>
            </value>
            <value>
                <fullName>Frigo - chilled</fullName>
            </value>
            <value>
                <fullName>Frigo - frozen</fullName>
            </value>
            <value>
                <fullName>Frigo - split wall</fullName>
            </value>
            <value>
                <fullName>Curtainside - ambient</fullName>
            </value>
            <value>
                <fullName>Box trailer</fullName>
            </value>
            <value>
                <fullName>Cooled</fullName>
                <isActive>false</isActive>
                <label>Cooled</label>
            </value>
            <value>
                <fullName>Frigo</fullName>
                <isActive>false</isActive>
                <label>Frigo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>