force-app/main/default/objects/Preferred_Supplier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Lane_Name__c</columns>
    <columns>Trailer_Type__c</columns>
    <columns>Total_Freight_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>